# mermaid-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src/components/: DiagramView.css  DiagramView.tsx  EmptyState.css  EmptyState.tsx  TabBar.css  TabBar.tsx
src/hooks/: useMermaidRenderer.ts  useTauriEvents.ts
