[package]
name = "mermaid-viewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["sync"] }

[lib]
name = "mermaid_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
